21-istio-service-mesh/solution/istio-manifests.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sample-app-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "sample-app.example.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sample-app-vs
  namespace: default
spec:
  hosts:
  - "sample-app.example.com"
  gateways:
  - sample-app-gateway
  http:
  - route:
    - destination:
        host: sample-app-svc
        port:
          number: 80
